# backend/openapi.yaml
@@ -194,19 +194,16 @@ paths:
                   vegWashed:
                     type: array
                     items: { $ref: '#/components/schemas/InventoryItem' }
-  /inventory/wash:
-    post:
+  /inventory/wash/{id}:
+    patch:
       security: [{ bearerAuth: [] }]
       summary: Помыть овощ
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required: [inventoryId]
-              properties:
-                inventoryId: { type: integer }
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
       responses:
         '200':
           description: OK
